# musical-practice-stuff

./: README.md  intervalstuff.py  modestuff.py  scalestuff.py
rizzless_guitar_guide1.1.0-alpha/: pyproject.toml
rizzless_guitar_guide1.1.0-alpha/src/rizzless_guitar_guide/: guide.py  intervalstuff.py  modestuff.py
